# AI_Document_V3

./: .gitattributes  .gitignore  AI_Document_V2_OCR_Analysis_Report.md  INSTALL_GUIDE.md  MANUAL.md  README.md  V3_DEVELOPMENT_PLAN.md  docker-compose.yml  ollama_api_latest.html  package.json  setup.sh  tmp_before.txt
backend/: .env_example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/v1/: admin.py  auth.py  documents.py  folders.py  metadata.py  rag.py  tasks.py  vector_search.py
backend/app/core/: config.py  security.py
backend/app/services/: __init__.py  ai.py  documents.py  metadata.py  ocr_pipeline.py  ollama_client.py  pdf_image.py  pdf_processing.py  system_config.py  users.py  vector_store.py
backend/app/utils/: __init__.py  exceptions.py  logging_config.py  security.py  validators.py
backend/scripts/: test_flow.py
frontend/: clear-cache.ps1  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: PrivateRoute.jsx  TaskProgressBanner.jsx
frontend/src/components/Admin/: ClassificationManagement.jsx  ProjectManagement.jsx  SystemSettings.jsx
frontend/src/contexts/: TaskStatusContext.jsx
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  DocumentCreatePage.jsx  DocumentDetailPage.jsx  DocumentEditPage.jsx  DocumentsPage.jsx  LoginPage.jsx  NotebookPage.jsx  QAConsolePage.jsx  RegisterPage.jsx  VectorHealthPage.jsx  VectorSearchTestPage.jsx
frontend/src/services/: api.js
frontend/src/stores/: authStore.js
(+11 files in other folders)
