[project]
name = "ai-document-v3-backend"
version = "0.1.0"
description = "AI Document V3 backend"
readme = "../README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "pydantic-settings",
  "psycopg2-binary",
  "pydantic[email]",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt==4.0.1",
  "python-multipart",
  "pdfminer.six",
  "httpx",
  "faiss-cpu",
  "numpy",
  "pymupdf",
  "Pillow",
  "slowapi",
  "paddleocr",
  "paddlepaddle",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
